feat: implement binary app deploy
