# api/openapi.yaml
@@ -85,17 +85,24 @@ components:
     DeployBinaryAppRequest:
       type: object
       required:
-        - app_slug
-        - environment
+        - team_id
+        - deployment_id
+        - app_id
+        - environment_name
         - artifact_source
         - artifact_version
         - artifact_name
+        - callback_url
+        - domain
+        - port
       properties:
         deployment_id:
           type: string
-        app_slug:
+        team_id:
           type: string
-        environment:
+        app_id:
+          type: string
+        environment_name:
           type: string
         artifact_source:
           type: string
@@ -106,6 +113,14 @@ components:
         callback_url:
           type: string
           format: uri
+        domain:
+          type: string
+        env_vars:
+          type: object
+          additionalProperties:
+            type: string
+        port:
+          type: integer
         args:
           type: array
           items:
@@ -322,8 +337,8 @@ paths:
             schema:
               $ref: "#/components/schemas/CreateBinaryAppRequest"
       responses:
-        "200":
-          description: OK
+        "202":
+          description: Accepted
           content:
             application/json:
               schema:
@@ -390,8 +405,8 @@ paths:
             schema:
               $ref: "#/components/schemas/DeployBinaryAppRequest"
       responses:
-        "200":
-          description: OK
+        "202":
+          description: Accepted
           content:
             application/json:
               schema:
